@@ -11,6 +11,11 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2025-05-05> *0.9.44*
+
+- Sorted model names alphabetically in intro message
+- Removed multishot writing to register name letters
+
 ** <2025-05-05> *0.9.43*
 
 Fix model reference error exceeding 26 models #15
